# haiku-geometric

./: .readthedocs.yml  README.md  requirements.txt  setup.cfg
.github/workflow/: main.yml
.github/workflows/: python-app.yml
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst
docs/source/modules/: datasets.rst  models.rst  nn.rst  posenc.rst  transforms.rst  utils.rst
docs/source/notebooks/: 1_quickstart.ipynb  batch_support.ipynb  creating_dataset.ipynb  quickstart.ipynb
examples/: 1_quickstart.ipynb  GATConv_CORA.ipynb  GCNConv_karate_club.ipynb  TopKPooling_GraphConv_PROTEINS.ipynb
haiku_geometric/: __init__.py
haiku_geometric/datasets/: __init__.py  base.py  gnn_benchmark_dataset.py  karate_dataset.py  ogb_dataset.py  planetoid_dataset.py  toy_dataset.py  tu_dataset.py  utils.py
haiku_geometric/models/: MLP.py  __init__.py  node2vec.py
haiku_geometric/nn/: __init__.py
haiku_geometric/posenc/: __init__.py  laplacian_encoder.py  mag_laplacian_encoder.py
haiku_geometric/transforms/: __init__.py  add_self_loops.py  normalize.py  remove_self_loops.py
haiku_geometric/utils/: __init__.py  batch.py  coalesce.py  laplacian.py  magnetic_laplacian.py  pad.py  random_walk.py  scatter.py  undirected.py  utils.py
test/: requirements.txt
test/datasets/: test_karate.py  test_toy.py  test_tudataset.py
test/models/: test_Node2Vec.py
test/posenc/: test_laplacian_encoder.py  test_mag_laplacian_encoder.py
test/utils/: test_batch.py  test_coalesce.py  test_eigv_laplacian.py  test_laplacian.py  test_magnetic_laplacian.py
(+53 files in other folders)
