[metadata]
name = haiku_geometric
url = https://github.com/alexOarga/haiku-geometric
version = 0.0.1a
author = Alex Oarga
author_email = alex718123@gmail.com
long_description = file: README.md, CHANGELOG.rst, LICENSE
long_description_content_type = text/markdown
;keywords = one, two
license = Apache-2.0 license
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
python_requires = >=3.4

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    jax
    dm-haiku
    jraph
    setuptools
    tqdm

